# isomorphism

./: CMakeLists.txt  README.md
include/isomorphism/: math.hpp  tensor.hpp
include/isomorphism/interop/: eigen.hpp  mlx.hpp  torch.hpp
qr_accelerated/: QR_Streaming_AMX.metallib  QR_Unblocked.metallib  qr_streaming_amx.mm
src/backends/eigen/: math_eigen.cpp  memory_pool.hpp  tensor_eigen.cpp  tensor_impl_eigen.hpp
src/backends/mlx/: math_mlx.cpp  tensor_impl_mlx.hpp  tensor_mlx.cpp
src/backends/torch/: math_torch.cpp  tensor_impl_torch.hpp  tensor_torch.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_qr.cpp  test_qr1.cpp
